--- a/src/app/components/menus/drawer/drawer.component.html
+++ b/src/app/components/menus/drawer/drawer.component.html
@@ -7,7 +7,7 @@
     <ion-content id="content">
       <ion-list>
 
-            <ion-item [routerLink]="['/settings']" >
+            <ion-item [routerLink]="['/settings']" (click)="onClickItem()">
                 <ion-label>
                     Settings
                 </ion-label>
