--- a/src/app/components/gallery/gallery.component.scss
+++ b/src/app/components/gallery/gallery.component.scss
@@ -3,7 +3,7 @@ ion-col > div {
     background-color: #f7f7f7;
     border: solid 1px #ddd;
     padding: 10px;
-    height: 100px;
+    // height: 100px;
 }
 
 ion-col > div:active {
