Filter created : hot, new, best,... and time sort : hour, day, week,... Media from gfycat is now played as mp4 Added a setting to mute videos (default true)

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -15,7 +15,8 @@
                     backgroundSize: 'cover',
                     height: '100px'
                 }"
-                [routerLink]="['/image-viewer', media.mediaUrl, media.title ]">
+                [routerLink]="['/image-viewer', media.mediaUrl, media.title, media.type ]"
+                (click)="thumbClick(media)">
             </div>
 
         </ion-col>
