Bug "Clicking on a thumbnail when gallery size = medium won't open the image" fixed

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -40,7 +40,7 @@
                         backgroundSize: 'cover',
                         height: '150px'
                     }"
-                    [routerLink]="['/image-viewer', media.mediaUrl, media.title ]">
+                    [routerLink]="['/image-viewer', media.mediaUrl, media.title, media.type ]">
                 </div>
     
             </ion-col>
