--- a/src/app/components/menus/drawer/drawer.component.html
+++ b/src/app/components/menus/drawer/drawer.component.html
@@ -1,19 +1,20 @@
-<ion-menu side="start" menuId="first" content-id="content">
+
+<ion-menu #menu side="start" menuId="first" content-id="content" (ionWillOpen)="openMenu($event)" (ionWillClose)="closeMenu($event)">
     <ion-header>
-      <ion-toolbar color="primary">
+        <ion-toolbar color="primary">
         <ion-title>Menu</ion-title>
-      </ion-toolbar>
+        </ion-toolbar>
     </ion-header>
     <ion-content id="content">
-      <ion-list>
+        <ion-list>
 
             <ion-item [routerLink]="['/settings']" (click)="onClickItem()">
                 <ion-label>
                     Settings
                 </ion-label>
                 <ion-icon name="settings" slot="end"></ion-icon>
-            </ion-item> 
+            </ion-item>
 
-      </ion-list>
+        </ion-list>
     </ion-content>
 </ion-menu>
