--- a/src/app/components/menus/drawer/drawer.component.html
+++ b/src/app/components/menus/drawer/drawer.component.html
@@ -14,6 +14,12 @@
                 </ion-label>
                 <ion-icon name="settings" slot="end"></ion-icon>
             </ion-item>
+            <ion-item [routerLink]="['/logs']" (click)="onClickItem()">
+                <ion-label>
+                    Logs
+                </ion-label>
+                <ion-icon name="outlet" slot="end"></ion-icon>
+            </ion-item>
 
         </ion-list>
     </ion-content>
